<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abgl.MyWaiterPad.com.abgl.MyWaiterPad.activity.DishDetailActivity">

    <TextView
        android:id="@+id/product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="32dp"
        android:textSize="@dimen/product_detail_name_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="@+id/product_image"
        tools:text="Food name" />

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="@dimen/product_detail_image_size"
        android:layout_height="@dimen/product_detail_image_size"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/product_image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/no_photo" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/product_name"
        app:layout_constraintTop_toBottomOf="@+id/product_name"
        tools:text="19.50 €"
        android:textSize="@dimen/product_detail_price_size"
        android:layout_marginRight="@dimen/margin_small"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/allergen_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_price">

        <ImageView
            android:id="@+id/celery_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/a_celery"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/crustacean_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintStart_toEndOf="@+id/fish_image"
            app:srcCompat="@drawable/a_crustacean"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/egg_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginLeft="@dimen/distance_between_allergen_images"
            android:layout_marginStart="@dimen/distance_between_allergen_images"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintStart_toEndOf="@+id/celery_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_egg" />

        <ImageView
            android:id="@+id/fish_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintStart_toEndOf="@+id/lupin_image"
            app:srcCompat="@drawable/a_fish"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/gluten_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginLeft="@dimen/distance_between_allergen_images"
            android:layout_marginStart="@dimen/distance_between_allergen_images"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintStart_toEndOf="@+id/egg_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_gluten" />

        <ImageView
            android:id="@+id/lupin_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintStart_toEndOf="@+id/mollusc_image"
            app:srcCompat="@drawable/a_lupin"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/milk_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginLeft="@dimen/distance_between_allergen_images"
            android:layout_marginStart="@dimen/distance_between_allergen_images"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintStart_toEndOf="@+id/gluten_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_milk" />

        <ImageView
            android:id="@+id/mollusc_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintStart_toEndOf="@+id/peanut_image"
            app:srcCompat="@drawable/a_mollusc"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/mustard_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginLeft="@dimen/distance_between_allergen_images"
            android:layout_marginStart="@dimen/distance_between_allergen_images"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintStart_toEndOf="@+id/milk_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_mustard" />

        <ImageView
            android:id="@+id/peanut_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintStart_toEndOf="@+id/soya_image"
            app:srcCompat="@drawable/a_cacahuete"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/sesamo_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginLeft="@dimen/distance_between_allergen_images"
            android:layout_marginStart="@dimen/distance_between_allergen_images"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintStart_toEndOf="@+id/mustard_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_sesamo" />

        <ImageView
            android:id="@+id/soya_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintStart_toEndOf="@+id/treenuts_image"
            app:srcCompat="@drawable/a_soya"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/sulphite_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginLeft="@dimen/distance_between_allergen_images"
            android:layout_marginStart="@dimen/distance_between_allergen_images"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintStart_toEndOf="@+id/sesamo_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_sulphite" />

        <ImageView
            android:id="@+id/treenuts_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintStart_toEndOf="@+id/sulphite_image"
            app:srcCompat="@drawable/a_treenuts" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/food_description"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/product_detail_description_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allergen_list"
        tools:text="Food Description ." />

    <TextView
        android:id="@+id/options_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:text="@string/product_options_label"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_description" />

    <TextView
        android:id="@+id/food_options"
        android:layout_width="0dp"
        android:layout_height="122dp"
        android:layout_marginBottom="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/delete_food_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options_label"
        tools:text="Food options" />

    <Button
        android:id="@+id/ok_food_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/delete_food_button"
        android:layout_marginRight="@dimen/margin_small"/>

    <Button
        android:id="@+id/delete_food_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:text="@string/delete_product"
        android:backgroundTint="@color/red_alert_button"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ok_food_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="@dimen/margin_small"/>

</android.support.constraint.ConstraintLayout>
