<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abgl.MyWaiterPad.activity.AddProductSheetDetailActivity">

    <TextView
        android:id="@+id/product_name"
        android:layout_width="225dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/product_detail_name_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/product_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_image"
        tools:text="Product name " />

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="379dp"
        android:layout_height="178dp"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:contentDescription="@string/product_image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/no_photo" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="148dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/product_detail_price_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_image"
        tools:text="12.30 €" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/allergen_list"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name">

        <ImageView
            android:id="@+id/celery_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_celery" />

        <ImageView
            android:id="@+id/crustacean_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fish_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_crustacean" />

        <ImageView
            android:id="@+id/egg_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/distance_between_allergen_images"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/celery_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_egg" />

        <ImageView
            android:id="@+id/fish_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lupin_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.764"
            app:srcCompat="@drawable/a_fish" />

        <ImageView
            android:id="@+id/gluten_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/distance_between_allergen_images"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/egg_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_gluten" />

        <ImageView
            android:id="@+id/lupin_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mollusc_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_lupin" />

        <ImageView
            android:id="@+id/milk_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/distance_between_allergen_images"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gluten_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_milk" />

        <ImageView
            android:id="@+id/mollusc_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/peanut_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_mollusc" />

        <ImageView
            android:id="@+id/mustard_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/distance_between_allergen_images"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/milk_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_mustard" />

        <ImageView
            android:id="@+id/peanut_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="21dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/soya_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_cacahuete" />

        <ImageView
            android:id="@+id/sesamo_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/distance_between_allergen_images"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mustard_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_sesamo" />

        <ImageView
            android:id="@+id/soya_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/treenuts_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_soya" />

        <ImageView
            android:id="@+id/sulphite_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="@dimen/distance_between_allergen_images"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sesamo_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_sulphite" />

        <ImageView
            android:id="@+id/treenuts_image"
            android:layout_width="@dimen/allergen_image_size"
            android:layout_height="@dimen/allergen_image_size"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/allergen_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sulphite_image"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/a_treenuts" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/food_description"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/product_detail_description_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allergen_list"
        tools:text="Food Description." />

    <EditText
        android:id="@+id/food_options"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:layout_marginBottom="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_default"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/product_options_hint"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/cancel_product_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_description" />

    <Button
        android:id="@+id/add_product_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/add_product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel_product_button"
        android:layout_marginRight="@dimen/margin_small"/>

    <Button
        android:id="@+id/cancel_product_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_product_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="@dimen/margin_small"/>

</android.support.constraint.ConstraintLayout>
